- Moved the Fast Poll checkbox to a selection item in the Settings menu (selected
  by default).  The polling state is reported in the queries/sec status display.
- Added a Debugging Level selection option to the Help menu.  The setting is saved
  and restored between sessions.  INFO should be the normal state to keep the
  rr_system.log file in-check.
--- Editor ---
- Set JInternalFrame.isPalette in TableFarme.java so table titles are visible on
  Mac OS.
  

0.5.3b RC10 (09/12/2011)
------------------------

--- Editor ---
- Added support for multiple-state switches.  Switch Tables will now use
  Radio Buttons rather than a Checkbox.
- Added ECU definition data validation for Switch Tables.  If the ROM image data
  does not match one of the switch states according to the definition then a
  warning is presented and the table is locked from editing.
- Added ROM Checksum validation on image open for 32 bit ROMs.  An ERROR message
  is presented warning not to use the ROM image as it may be corrupt.
- Added ROM Checksum calculation for 32 bit ROMs.  Upon file save the new
  Checksums (if not previously disabled) are written to the ROM.
- Added a ROM Edit Stamp to 32 bit ROMs consisting of the YYMMDD and an
  incremental count value.  This Edit Stamp is displayed in the View->ROM
  properties menu item.
- Fixed the missing Table Tree problem when running RomRaider on systems
  using IcedTea or OpenJDK JVM.
--- Logger ---
- Added more selections to the Right-click menu associated with the LogFile text
  field.
- Made Fast Polling the default mode for the Logger connection.

0.5.3b RC9 (06/30/2011)
-----------------------

--- Logger ---
- log4j.properties updated with new name for romraider.log --> rr_system.log
- new logger field to allow arbitrary text to be added to log file name (right-
  click on field for options)
- Tech Edge plugin updates
- PLX plugin update to ignore unsupported data items
- Innovate MTS plugin updated to ignore unsupported data items