@@ -215,7 +215,6 @@ public final class EcuLogger extends AbstractFrame implements MessageListener {
     private JLabel statsLabel;
     private JTabbedPane tabbedPane;
     private SerialPortComboBox portsComboBox;
-    private JCheckBox portRefresh;
     private DataUpdateHandlerManager dataHandlerManager;
     private DataRegistrationBroker dataTabBroker;
     private ParameterListTableModel dataTabParamListTableModel;
@@ -1065,15 +1064,6 @@ public final class EcuLogger extends AbstractFrame implements MessageListener {
         JPanel comboBoxPanel = new JPanel(new FlowLayout());
         comboBoxPanel.add(new JLabel("COM Port:"));
         comboBoxPanel.add(portsComboBox);
-        portRefresh = new JCheckBox("Auto Refresh");
-        portRefresh.setToolTipText("Check to enable automatic COM port refreshing");
-        portRefresh.addActionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent actionEvent) {
-            	refresher.setRefreshMode(portRefresh.isSelected());
-            	settings.setRefreshMode(portRefresh.isSelected());
-            }
-        });
-        comboBoxPanel.add(portRefresh);
 
         final JCheckBox ecuCheckBox = new JCheckBox("ECU");
         final JCheckBox tcuCheckBox = new JCheckBox("TCU");
@@ -1456,8 +1446,8 @@ public final class EcuLogger extends AbstractFrame implements MessageListener {
 	    }
     }
 
-	private void setRefreshMode(boolean refreshMode) {
-        portRefresh.setSelected(refreshMode);
+	public void setRefreshMode(boolean refreshMode) {
+		settings.setRefreshMode(refreshMode);
        	refresher.setRefreshMode(refreshMode);
 	}
 }
